--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ go:
 - 1.8.x
 - 1.9.x
 
-before_script:
+before_install:
+- go get github.com/mattn/goveralls
 - go get github.com/pierrre/gotestcover
 
 script:
 - make test
+- goveralls -service=travis-ci
